<resources>
    <string name="app_name">NASArog</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wiki_hint">Поиск в Википедии</string>
    <string name="search_helper">Поиск</string>
    <string name="start_icon_description">Иконка Wiki</string>
    <string name="APOD_description">Фото дня из NASA</string>
    <string name="menu_action_settings">Настройки</string>
    <string name="menu_action_favorite">Закладки</string>
    <string name="menu_action_search">Поиск</string>
    <string name="menu_action_go_back">Назад</string>
    <string name="fab_description">Добавить</string>
    <string name="chip_before_yesterday">Позавчера</string>
    <string name="chip_yesterday">Вчера</string>
    <string name="chip_today">Сегодня</string>
    <string name="bottomsheet_top_icon">bottomsheet top icon</string>
    <string name="bottomsheet_description">This lovely starfield spans some four full moons.</string>
    <string name="bottomsheet_description_header">Two Clusters and a Comet</string>
    <string name="date_example">01.01.2000</string>
    <string name="favorite">FAVORITE</string>
    <string name="settings">SETTINGS</string>
    <string name="search">SEARCH</string>
    <string name="repeat">Повторить</string>
    <string name="example_text">Пример текста, пример текста, пример текста, пример текста, пример текста, пример текста, пример текста, пример текста, пример текста, пример текста, пример текста</string>
    <string name="menu_action_apod">Фото дня</string>
    <string name="menu_action_planets">Планеты</string>
    <string name="menu_action_open_menu">Меню</string>
    <string name="mars_photo_number">Фото # %1$d/%2$d</string>
    <string name="msg_unknown_mediatype">Неизвестный тип медиаданных</string>
    <string name="behaviors">Behaviors</string>
    <string name="shared_transition">Shared transition</string>
    <string name="tab_title_apod">Фото дня</string>
    <string name="tab_title_earth_photo">Фото Земли</string>
    <string name="tab_title_mars_photo">Фото Марса</string>
    <string name="apod_title_example">Название APOD</string>
    <string name="transition_apod_details">transition_apod_details</string>
    <string name="transition_details_date">transition_details_date</string>
    <string name="transition_details_title">transition_details_title</string>
    <string name="transition_details_explanation">transition_details_explanation</string>
    <string name="postponed_transition">Postponed transition</string>
    <string name="btn_custom_behavior_title">Custom behavior example</string>
    <string name="btn_shared_element_transition">Shared element transition</string>
    <string name="btn_not_stable_shared_element_transition">Not stable shared element transition</string>
    <string name="menu_action_features">Features</string>
    <string name="btn_recycler_view">Recycler view</string>
    <string name="asteroid_name_title">Имя астероида:</string>
    <string name="asteroid_magnitude_h_title">Магнитуда H:</string>
    <string name="asteroid_close_approach_date_title">Дата приближения к Земле:</string>
    <string name="header">Астероиды, пролетающие рядом с Землей в период\nс %1$s по %2$s</string>
    <string name="asteroid_search_hint">Поиск астероида по имени</string>
    <string name="span_text_example">This endpoint retrieves the Landsat 8 image for the supplied location and date. The response will include the date and URL to the image that is closest to the supplied date. The requested resource may not be available for the exact date in the request. You can retrieve a JSON that contains the inputs you provided and a URL to the resulting image through the assets endpoint. The assets endpoint no longer returns a list of potential images within your date range due to a change on the Google Earth Engine API side. The cloud score was an optional calculation that returns the percentage of the queried image that is covered by clouds, but it is not available in current versions of the API. If False If HTTP Request</string>
    <string name="font_request_provider_authority">com.google.android.gms.fonts</string>
    <string name="font_request_provider_package">com.google.android.gms</string>
    <string name="spans">Spans</string>
    <string name="menu_action_ux_button">UX кнопки</string>
    <string name="menu_action_ux_text">UX текст</string>
    <string name="ux_text_header">ПОДПИСКА</string>
    <string name="ux_text_title">ПРЕМИУМ</string>
    <string name="ux_text_description">В течение года: все каналы +\nкачество 4K</string>
    <string name="ux_text_first_month">Первый месяц - бесплатно</string>
    <string name="ux_text_price">9999 рублей*</string>
    <string name="ux_text_price_description">* цена действительна при покупке подписки на 10 лет. При покупке на срок менее 10 лет цена составит 19999 рублей в месяц</string>
    <string name="ux_btn_year_buy">Купить на год</string>
    <string name="ux_btn_month_buy">Купить на месяц</string>
    <string name="ux_btn_licence">Условия договора</string>
    <string name="ux_guide_title_modern">Современный подход</string>
    <string name="ux_guide_title_old_school">"Устаревший подход"</string>
    <string name="ux_button_guide_scene_5_content">"Нежелательная кнопка:\n- выполнена в едином с общим интерфейсом стиле, но не привлекает внимание\n- расположена в неудобной для пользователя зоне дисплея"</string>
    <string name="ux_button_guide_scene_4_content">"Главная кнопка:\n- не \"режет взгляд\", но привлекает внимание\n- расположена в удобной для пользователя зоне дисплея"</string>
    <string name="ux_button_guide_scene_2_content">Привлечение внимания к главной кнопке за счет ее размера и ярких цветов</string>
    <string name="ux_button_guide_scene_3_content">"Так мы будем работать с кнопками после курса\n\"Android. Material design\""</string>
    <string name="ux_button_guide_scene_1_content">"Так мы работали с кнопками до курса\n\"Android. Material design\""</string>
    <string name="ux_text_guide_scene_1_content">"Так мы работали с текстом до курса\n\"Android. Material design\""</string>
    <string name="ux_text_guide_scene_2_content">"Так мы будем работать с текстом после курса\n\"Android. Material design\""</string>
</resources>