<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:padding="@dimen/margin_4dp">

    <Button
        android:id="@+id/btn_custom_behavior"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/btn_custom_behavior_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btn_shared_element_transition"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/btn_shared_element_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_custom_behavior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btn_shared_element_transition_not_stable"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:text="@string/btn_not_stable_shared_element_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_shared_element_transition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>